# jobbintervju_nav

./: .pylintrc  BESVARELSE.md  OPPGAVE.md  README.md  hello.py  pyproject.toml
.github/workflows/: linting.yaml
diagrams/: ER-diagram.md
notebooks/: overview.ipynb
sqls/: create_table_adresse.sql  create_table_aldergruppe.sql  create_table_betaling.sql  create_table_kjonn.sql  create_table_kontigent.sql  create_table_kontingent.sql  create_table_medlem.sql  create_table_medlemstype.sql  create_table_poststed.sql
src/sqlite_loader/: __init__.py  config.py  db.py  main.py
